--- a/work.html
+++ b/work.html
@@ -1,135 +1,104 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <title>근태기록 페이지</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-            
-<div class="">
-	<h1 class="title"> 월표시</h1>
-	<input type="button" value="이전" class="prevNext" prev>
-	<input type="button" value="다음" class="prevNext">
-	<button class="close">모두 접기</button>
-    <div class="contentContainer">
-    </div>
-</div>
+    <h1>근태기록 페이지</h1>
 
+    <label for="year">년도:</label>
+    <input type="number" id="year" min="2000" max="2100" value="" required>
+    <label for="month">월:</label>
+    <input type="number" id="month" min="1" max="12" value="" required>
+    <button onclick="showAttendance()">조회</button>
 
-<script type="text/template" id="template">
-<div class="weekContainer">
-	<div class="center listHeader">
-		<span id="week"></span>
-		<span>( 주간 누적 시간 : <span class="cumulative"></span> )</span>
-	</div>
-	<div class="tableContainer hide">
-		<table class="workingHourTable table table-border">
-			<thead>
-				<tr>
-					<td width="100px">일자</td>
-					<td>출근 시간</td>
-					<td>퇴근 시간</td>
-					<td>총 근무 시간</td>
-				</tr>
-			</thead>
-			<tbody class="workingHourTable"></tbody>
-		</table>
-	</div>
-	<hr>
-</div>
-</script>
-<script>
-   function removeAllChild(parent) {
-        $(parent).empty();
-    }
+    <div id="attendanceTable"></div>
 
-    function getDateString(date) {
-        const year = date.getFullYear();
-        const month = (date.getMonth() + 1).toString().padStart(2, "0");
-        const day = date.getDate().toString().padStart(2, "0");
-        return `${year}-${month}-${day}`;
-    }
+    <script>
+        function showAttendance() {
+            var year = document.getElementById("year").value;
+            var month = document.getElementById("month").value;
 
-    const today = new Date();
-    const temp_date = new Date("2023-05-01");
-    const dayArr = ["일", "월", "화", "수", "목", "금", "토", "일"];
+            var startDate = new Date(year, month - 1, 1);
+            var endDate = new Date(year, month, 0);
 
-    function paintTemplate() {
-        const contentContainer = $(".contentContainer");
-        removeAllChild(contentContainer);
+            var tableHTML = "<table>" +
+                "<tr>" +
+                "<th>일자</th>" +
+                "<th>출근시간</th>" +
+                "<th>퇴근시간</th>" +
+                "<th>근무시간</th>" +
+                "</tr>";
 
-        for (let i = 0; i < 6; i++) {
-            const template = $("#template").html();
-            contentContainer.append(template.replace("{week}", (i + 1) + "주차"));
-        }
-    }
+            var weekCount = 1;
+            var weekStartDate = new Date(startDate);
+            weekStartDate.setDate(startDate.getDate() - startDate.getDay());  // Adjust to the previous Sunday
 
-    function paintTable() {
-        paintTemplate();
+            while (weekStartDate < endDate) {
+                var weekEndDate = new Date(weekStartDate);
+                weekEndDate.setDate(weekStartDate.getDate() + 6);  // Adjust to the next Saturday
 
-        $(".title").html(`${temp_date.getFullYear()}.${temp_date.getMonth() + 1}`);
+                tableHTML += "<tr><th colspan='4'>Week " + weekCount + "</th></tr>";
 
-        const start = new Date(temp_date);
-        start.setDate(1 - start.getDay());
-        for (let i = 0; i < 6; i++) {
-            for (let j = 0; j < 7; j++) {
-                const newTr = $("<tr>").addClass("dayTr");
-                for (let k = 0; k < 4; k++) {
-                    const newTd = $("<td>");
-                    if (k === 0) {
-                        newTd.html(start.getDate() + " " + dayArr[j]);
-                        start.setDate(start.getDate() + 1);
+                for (var date = weekStartDate; date <= weekEndDate; date.setDate(date.getDate() + 1)) {
+                    if (date >= startDate && date <= endDate) {
+                        var formattedDate = formatDate(date);
+
+                        // Find corresponding record for the date
+                        var record = findRecord(formattedDate);
+
+                        tableHTML += "<tr>" +
+                            "<td>" + formattedDate + "</td>" +
+                            "<td>" + (record ? record.startTime : "") + "</td>" +
+                            "<td>" + (record ? record.endTime : "") + "</td>" +
+                            "<td>" + (record ? record.workTime : "") + "</td>" +
+                            "</tr>";
                     }
-                    newTr.append(newTd);
                 }
-                $(".workingHourTable>tbody").eq(i).append(newTr);
+
+                weekCount++;
+                weekStartDate.setDate(weekEndDate.getDate() + 1);  // Adjust to the next Sunday
             }
-            $(".listHeader").eq(i).on("click", function () {
-                $(this).next().toggleClass("hide");
-            });
+
+            tableHTML += "</table>";
+
+            document.getElementById("attendanceTable").innerHTML = tableHTML;
         }
-    }
 
-    paintTable();
+        function formatDate(date) {
+            var year = date.getFullYear();
+            var month = (date.getMonth() + 1).toString().padStart(2, '0');
+            var day = date.getDate().toString().padStart(2, '0');
 
-    //이전 버튼
-    $(".prevNext").on("click", function () {
-        const val = $(this).attr("prev") ? -1 : 1;
-        temp_date.setMonth(temp_date.getMonth() + val);
-        const link = "att_status.jsp?date={date}".replace("{date}", getDateString(temp_date));
-        location.href = link;
-    });
-
-    // 접기버튼
-    $(".close").on("click", function () {
-        $(".tableContainer").addClass("hide");
-    });
-
-    //dayTr 생성
-    $(".dayTr").each(function () {
-        $(this).children().eq(3).remove();
-        $(this).children().eq(2).remove();
-        $(this).children().eq(1).attr("colspan", 3).text("정보가 없습니다.");
-    });
-
-    $(".cumulative").eq(0).text("0h 00m 00s");
-
-    const indices = [7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41];
-    const cumulativeValues = ["0h 00m 00s", "0h 00m 37s", "0h 00m 00s", "0h 00m 00s", "0h 00m 00s"];
-
-    for (let i = 0; i < indices.length; i++) {
-        const dayTr = $(".dayTr").eq(indices[i]);
-        dayTr.children().eq(3).remove();
-        dayTr.children().eq(2).remove();
-        dayTr.children().eq(1).attr("colspan", 3).text("정보가 없습니다.");
-
-        if (i < cumulativeValues.length) {
-            $(".cumulative").eq(i + 1).text(cumulativeValues[i]);
+            return year + "-" + month + "-" + day;
         }
-    }
 
-		
-</script>
+        function findRecord(date) {
+            var records = [
+                { "startTime": "2023-05-17 16:11:05", "endTime": "2023-05-17 16:11:06", "workTime": null, "workDate": "2023-05-17" },
+                { "startTime": "2023-05-18 10:14:29", "endTime": "2023-05-18 17:59:59", "workTime": null, "workDate": "2023-05-18" },
+                { "startTime": "2023-05-19 10:12:53", "endTime": "2023-05-19 13:42:46", "workTime": null, "workDate": "2023-05-19" }
+            ];
 
+            for (var i = 0; i < records.length; i++) {
+                if (records[i].workDate === date) {
+                    return records[i];
+                }
+            }
+
+            return null;
+        }
+    </script>
 </body>
-</html>          
+</html>
